fixed: high avatars can overflow

--- a/src/main-scss/chat.scss
+++ b/src/main-scss/chat.scss
@@ -230,8 +230,11 @@ body.mobile #message-scroller {
 	.user {
 		.avatar-wrapper {
 			width: 16px;
+			height: 16px;
+			margin-bottom: 2px;
 			.avatar {
 				max-width: 100%;
+				max-height: 100%;
 				height: auto;
 			}
 		}
@@ -239,12 +242,14 @@ body.mobile #message-scroller {
 	.user.size1 {
 		.avatar-wrapper {
 			width: 20px;
+			height: 20px;
 			margin-right: 10px; // I don't really understand why I need this
 		}
 	}
 	.user.size2 {
 		.avatar-wrapper {
 			width: 26px;
+			height: 26px;
 		}
 		span {
 			width: 100%;
@@ -255,6 +260,7 @@ body.mobile #message-scroller {
 	.user.size3 {
 		.avatar-wrapper {
 			width: 40px;
+			height: 40px;
 		}
 		span {
 			width: 100%;
@@ -265,6 +271,7 @@ body.mobile #message-scroller {
 	.user.size4 {
 		.avatar-wrapper {
 			width: 56px;
+			height: 56px;
 		}
 		span {
 			width: 100%;
